# DoublyPeriodicStokes

./: .gitmodules  Makefile  README.md  compile_flags.txt
benchmark/: README.md  fcm_multiblob_compare.py
benchmark/fftw_wisdom/: fftw_backward_wisdom_Nx525_Ny525_Nz108_dof3_nthr10_patient_blob.cims.nyu.edu  fftw_forward_wisdom_Nx216_Ny216_Nz50_dof3_nthr10_patient_blob.cims.nyu.edu
figures/: README.md  mobility_numba.py  pair_mobility.py
figures/Figures/: cbetafit.m  effRad_err.m  frgr_numeric.m  lanczos_BWSCTP.m  lanczos_SC_to_BWTP.m  pair_mobilities_decay_flowpattern.m  pair_rr.m  pair_tr.m  pair_tt.m  replicas.m  rollers.m  rollersFigure.tex  rollers_BWSC_Comparison.m  rollers_dR_coef.m  rollers_dR_coefFigure.tex  self_rr.m  self_tr.m  self_tt.m
figures/Figures/data/: effRad_monopole.mat  mobility_asymm_posdef_bw_w6.mat  mobility_asymm_posdef_sc_w4.mat  pair_mobility_bw.mat  pair_mobility_bw_ref.mat  parallel_mobility_unit_w4.txt  perpendicular_mobility_unit_w4.txt  self_mobility_bw_ref2x.mat
figures/Figures/data/rollers/: Hist_Mat.mat  LOWEST_FINAL_3_Torque_Lim.mat  Spectral_torque_lim_Omega_COMPARE.mat
figures/Figures/data/rollers/Coef_Data/: DP_case_res_scalars_channel_H6a_FCM_L32.txt  DP_case_res_scalars_wall_MB_1xL.txt  nDP_case_res_scalars_wall_MB_2562_eig_thresh_1xL.txt  res_scalars_channel_H1p5_MB_162_L32_q1.txt  res_scalars_channel_H3_MB_162_L32_q1.txt  res_scalars_channel_H3_MB_42_L32_q1.txt  res_scalars_channel_H3_MB_642_L32_q1.txt
figures/Figures/data/rollers/MAT_FILES/: Plot_MAT_Files.m  Spectral_Channel_H3a.mat  Spectral_Channel_H6a.mat  Spectral_torque_lim_Omega_COMPARE_OldC.mat  Spectral_torque_lim_Omega_FCM_pair_Case_Wall.mat  Spectral_torque_lim_Omega_FCM_pair_Case_Wall_3xImages.mat  Spectral_torque_lim_Omega_FCM_pair_Case_Wall_3xImages_hist.mat  Spectral_torque_lim_Omega_FCM_pair_RPY_Wall.mat
mobility/: README.md  fcm_multiblob_compare.py  mobility_matrix.py  pair_mobility.py  pair_mobility_matrix_asym.py  self_mobility.py
mobility/data/: effRad_dipole.mat  mobility_asymm_posdef_bw_w4.mat  mobility_asymm_posdef_sc_w6.mat  pair_mobility_sc.mat  pair_mobility_sc_ref.mat  parallel_mobility_unit_w6.txt  perpendicular_mobility_unit_w6.txt
mobility/plot/: effRad.m  pair_mobility_plot.m  pairmob_fr_gr_TP_plot_w4_w6.m  self_mobility_plot.m
python_interface/: Makefile  common_interface_wrapper.py  compile_flags.txt  cpuconfig.sh  dpstokes.py  dpstokesCPU.py  dpstokesGPU.py  dpstokes_common.py  dpstokes_test.py  uammd_wrapper.cu
python_interface/python_gpu/: uammd_interface.h  uammd_python.cpp  uammd_wrapper.cu
source/cpu/: CMakeLists.txt  Makefile.GNU  Makefile.Intel  README.md
source/cpu/cmake.in/: config.sh.in  cpuconfig.sh.in
source/cpu/examples/: fcm_example.py  fcm_multiblob_compare.py  mobility_bench.py
source/cpu/include/: BoundaryConditions.h  DPTools.h  ESKernels.h  Grid.h  LinearSolvers.h  ParticleList.h  Quadrature.h  SpreadInterp.h  TPTools.h  Transform.h  common.h  exceptions.h
source/cpu/python/: Chebyshev.py  FCM.py  Ghost.py  Grid.py  GridAndKernelConfig.py  Particles.py  Solvers.py  SpreadInterp.py  Transform.py  config.py
source/cpu/src/: DPTools.cpp  Grid.cpp  LinearSolvers.cpp  ParticleList.cpp  Quadrature.cpp  SpreadInterp.cpp  TPTools.cpp  Transform.cpp
source/cpu/wrapper/: BCWrapper.cpp  GridWrapper.cpp  ParticleListWrapper.cpp  SpreadInterpWrapper.cpp  TransformWrapper.cpp
source/gpu/python_wrapper/: Makefile  README.md  uammd_interface.h  uammd_python.cpp  uammd_wrapper.cu
